# YAP

./: .gitmodules  CMakeLists.txt  README.md
include/: yap.h
src/: create.cpp  extract.cpp  main.cpp  yap.cpp
